add css comments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
 <header>
     <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -20,6 +21,7 @@
 </header>
 
 <main>
+
     <figure class="hero"></figure>
 
     <section class="content">
@@ -48,28 +50,29 @@
     </section>
 
     <section class="benefits">
-        <article class="benefit-lead">
+        <article id="lead generation" class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Gear, funnel, arrow, and money symbol" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
-        <article class="benefit-brand">
+        <article id="brand awareness" class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Light bulb above shirt and tie symbol" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
-        <article class="benefit-cost">
+        <article id="cost management" class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="Gear symbol surrounded by three money symbols" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </article>
     </section>
+
 </main>
 
 <footer>
@@ -78,11 +81,7 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
 </footer>
-</body>
 
-</html>
-
-    </div>
 </body>
 
 </html>
